objects/butr__Test_Step_Result__c.object
<CustomObject>
 <fullName>butr__Test_Step_Result__c</fullName>
 <description>Individual result details for Apex test methods and Selenium suite's test cases.</description>
 <fields>
  <fullName>butr__Message__c</fullName>
  <label>Message</label>
  <length>32768</length>
  <type>Html</type>
 </fields>
 <fields>
  <fullName>butr__Result__c</fullName>
  <label>Result</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>butr__Step_Number__c</fullName>
  <label>Step Number</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>butr__Test_Script_Result__c</fullName>
  <label>Test Script Result</label>
  <referenceTo>butr__Test_Result__c</referenceTo>
  <relationshipLabel>Test Step Results</relationshipLabel>
  <relationshipName>Test_Step_Results</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>butr__Time_s__c</fullName>
  <defaultValue>0</defaultValue>
  <label>Time(s)</label>
  <precision>18</precision>
  <scale>3</scale>
  <type>Number</type>
 </fields>
 <label>Test Step Result</label>
 <nameField>
  <label>Test Result Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>Test Step Results</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>